feat: Implementação inicial do CRUD de Categoria com hooks e Axios

--- a/src/pages/cadastro/Cadastro.css
+++ b/src/pages/cadastro/Cadastro.css
@@ -1,5 +1,5 @@
 .fundoCadastro {
-    background-image: url("https://i.imgur.com/ZZFAmzo.jpg");
+    background-image: url("https://i.pinimg.com/736x/76/91/35/7691351514d3657b7918f8af1dba5d41.jpg");
     background-repeat: no-repeat;
     width: 100%;
     min-height: 100vh;
